<resources>
    <string name="app_name">Padova Quest</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="not_a_member_yet">Not a member yet?</string>
    <string name="or">OR</string>
    <string name="google_sing_in_web_client_id">256270436891-fnmmvs74v0c0jg0jouqe70l6kgqnoqki.apps.googleusercontent.com</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="confirm_password">Confirm password</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="my_profile">My Profile</string>
    <string name="profile">Profile</string>
    <string name="quest">Quest</string>
    <string name="start_personal_quest">Start Personal Quest</string>
    <string name="start_group_quest">Start Group Quest</string>
    <string name="log_out">Log Out</string>
    <string name="group_quest">Group Quest</string>
    <string name="share_this_code">Share this code with your friends so they can enter this group quest</string>
    <string name="start_the_quest">Start the Quest</string>
    <string name="once_you_start_the_quest_no_one_else_can_join">Once you start the quest, no one else can join!</string>
    <string name="passwords_do_not_match">Passwords don\'t match</string>
    <string name="join_a_group_quest">Join a Group Quest</string>
    <string name="quest_code">Quest Code</string>
    <string name="join">Join</string>
    <string name="waiting_for_the_quest_to_start">Waiting for the Quest to start</string>
    <string name="leave_the_group_quest">Leave the Group Quest</string>
    <string name="change_name">Change Name</string>
    <string name="change_password">Change Password</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>
    <string name="number_of_correct_answers">Number of correct answers:</string>
    <string name="others">Others:</string>
    <string name="winner">Winner:</string>
    <string name="delete_the_quest">Delete the Quest</string>
    <string name="stop_the_quest">Stop the Quest</string>
    <string name="google_maps_key">AIzaSyA1hvwFemLInVYPjaDRIN9s9qjqyDj104o</string>
    <string name="internet_lost">INTERNET LOST</string>
    <string name="you_are_near">You are near:</string>
    <string name="personal_quests">Personal Quests</string>
    <string name="my_group_quests">My Group Quests</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="e_mail_dots">E-mail:</string>
    <string name="joined_on">Joined on:</string>
    <string name="name_dots">Name:</string>
    <string name="joined">"Joined: "</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="group_quest_results">Group Quest Results</string>
    <string name="created_on">Created on:</string>
    <string name="places">"Places: "</string>
    <string name="score_board">Score Board</string>
    <string name="groupquestresultsactivity">GroupQuestResultsActivity</string>
</resources>