<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_user_profile"
                    android:icon="@drawable/account_circle_24px"
                    android:title="@string/my_profile" />
            </group>
        </menu>
    </item>

    <item android:title="@string/quest">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_personal_quest"
                    android:icon="@drawable/person_24px"
                    android:title="@string/start_personal_quest" />

                <item
                    android:id="@+id/nav_group_quest"
                    android:icon="@drawable/groups_24px"
                    android:title="@string/start_group_quest" />

                <item
                    android:id="@+id/nav_group_quest_join"
                    android:icon="@drawable/person_add_24px"
                    android:title="@string/join_a_group_quest" />


                <item
                    android:visible="false"
                    android:id="@+id/nav_stop_quest"
                    android:icon="@android:drawable/ic_delete"
                    android:title="@string/stop_the_quest" />
            </group>
        </menu>
    </item>


    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_log_out"
            android:title="@string/log_out" />
    </group>
</menu>