<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_my_profile">

    <fragment
        android:id="@+id/navigation_my_profile"
        android:name="it.unipd.milan.padovaquest.feature_profile.presentation.my_profile.MyProfileFragment"
        android:label="@string/my_profile"
        tools:layout="@layout/fragment_my_profile" />

    <fragment
        android:id="@+id/navigation_my_group_quests"
        android:name="it.unipd.milan.padovaquest.feature_profile.presentation.my_quests.group.MyGroupQuestsFragment"
        android:label="@string/my_group_quests"
        tools:layout="@layout/fragment_my_quests" />

    <fragment
        android:id="@+id/navigation_my_personal_quests"
        android:name="it.unipd.milan.padovaquest.feature_profile.presentation.my_quests.personal.MyPersonalQuestsFragment"
        android:label="@string/personal_quests"
        tools:layout="@layout/fragment_my_quests" />
</navigation>